bug fix: slider 1 img collapse

--- a/src/sass/modules/components.sass
+++ b/src/sass/modules/components.sass
@@ -23,22 +23,8 @@ img.imprint
     background: $brand-blue
     font-weight: 400
 
-.ui.breadcrumb
-  min-height: 62px
-  display: block
-  line-height: 25px
 
-  .section
-    margin-bottom: 5px
-    color: $copy
-  a
-    border-bottom: 2px solid $copy
-    &:hover
-      color: $brand-blue
-      border-bottom: 2px solid $brand-blue
 
-.ui.breadcrumb + .boundary
-  margin-top: 24px
 
 .search-advanced
   .inline.fields .field.radio
@@ -79,6 +65,9 @@ img.imprint
   .ui.button + .ui.button
     margin-left: 6px
 
+
+
+
 .ui.info.message,
 .ui.attached.info.message
   margin-top: 0
@@ -102,20 +91,6 @@ img.imprint
   p.label
     display: inline-block
 
-.carousel
-  margin: 0
-  img
-    cursor: url('../img/components/arrow-next.svg'), e-resize
-
-  button.slick-prev.slick-arrow
-    display: none !important
-
-  .slick-dots
-    position: static
-    li
-      margin: 0 8px
-      button::before
-        font-size: 13px
 
 
 .ui.styled.accordion,
@@ -131,28 +106,3 @@ img.imprint
     background-color: white
 
 
-.notify
-  position: fixed
-  bottom: 20px
-  right: 20px
-  .ui.button
-    background: $brand-green
-    color: white
-  .ui.info.message
-    margin-top: 0
-    margin-left: 20px
-    padding: 8px 12px
-    max-width: 300px
-    border-radius: 2px
-    i.close.icon
-      font-size: 18px
-    .header
-      font-size: 14px
-      padding: 0
-      min-width: 170px
-      line-height: 20px
-    .button
-      border: 1px solid rgba(255, 255, 255, 0.5)
-      margin: 12px 0 0 0
-      width: 65px
-      padding: 8px
